# encript_tool

./: Cargo.toml  README.md  test.txt
src/: config.rs  crypto.rs  file_ops.rs  gui.rs  key_derivation.rs  lib.rs  main.rs
