[package]
name = "encript_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = {version = "4.5.41", features = ["derive"]}
ctr = "0.9.2"
dirs = "6.0.0"
indicatif = "0.18.0"
rand = "0.9.2"
serde = {version = "1.0.219",features = ["derive"]}
toml = "0.9.2"
